k8s/ignore/mysql-slave.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-slave-service
spec:
  selector:
    app: mysql-slave
  ports:
    - protocol: TCP
      port: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-slave
spec:
  serviceName: mysql-slave-service
  replicas: 1
  selector:
    matchLabels:
      app: mysql-slave
  template:
    metadata:
      labels:
        app: mysql-slave
    spec:
      containers:
        - name: mysql-slave
          image: mysql:latest  # 또는 원하는 MySQL 이미지
          ports:
            - containerPort: 3306
